# Banshee

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  rust-toolchain.toml
.agents/skills/agent-delegate/: SKILL.md
.agents/skills/ai-changelog/: SKILL.md
.agents/skills/ai-docs-lookup/: SKILL.md
.agents/skills/ai-improvement-tracker/: SKILL.md
.agents/skills/branch-switch/: SKILL.md
.agents/skills/commit-message/: SKILL.md
.agents/skills/fable-orchestrate/: SKILL.md
.agents/skills/fable-orchestrate/references/: external-agents.md
.agents/skills/learning-consolidator/: SKILL.md
.agents/skills/plan-critic/: SKILL.md
.agents/skills/plan-critic/references/: finding-format.md  review-dimensions.md
.agents/skills/post-task-review/: SKILL.md
.agents/skills/post-task-review/references/: doc-impact-matrix.md
.agents/skills/prompt-domain-reviewer/: SKILL.md
.agents/skills/prompt-eng-reviewer/: SKILL.md
.agents/skills/prompt-eng-reviewer/references/: review-dimensions.md
.agents/skills/research-source-planner/references/: assignment.md  challenge-and-dedup.md  manifest-schema.md
.agents/skills/review-prompts/: SKILL.md
.agents/skills/session-retrospective/: SKILL.md
.agents/skills/session-retrospective/references/: report-template.md
.agents/skills/session-retrospective/scripts/: extract_sessions.py  test_extract_sessions.py
.agents/skills/skill-content-reviewer/: SKILL.md
.agents/skills/skill-creation-workflow/: SKILL.md
.agents/skills/skill-creator/: SKILL.md
.agents/skills/skill-researcher/: SKILL.md
.agents/skills/skill-reviewer/: SKILL.md
.agents/skills/spec-driven-dev/: SKILL.md
.agents/skills/spec-driven-dev/references/: phased-execution.md
.agents/skills/task-learnings/: SKILL.md
.ai/: ai-changelog.md  improvement-hypotheses.md  learnings.md
.ai/templates/: requirements.md
.claude/skills/agent-delegate/: SKILL.md
.claude/skills/ai-changelog/: SKILL.md
.claude/skills/ai-docs-lookup/: SKILL.md
.claude/skills/ai-improvement-tracker/: SKILL.md
.claude/skills/fable-orchestrate/: SKILL.md
.claude/skills/fable-orchestrate/references/: brief-template.md
.claude/skills/learning-consolidator/: SKILL.md
.claude/skills/learning-consolidator/references/: consolidation-actions.md  cross-reference-targets.md
.claude/skills/plan-critic/: SKILL.md
.claude/skills/post-task-review/: SKILL.md
.claude/skills/post-task-review/references/: review-checklist.md
.claude/skills/product-brief/: SKILL.md
.claude/skills/product-brief/references/: examples.md  (+1 more)
.claude/skills/prompt-domain-reviewer/: SKILL.md
.claude/skills/prompt-eng-reviewer/: SKILL.md
.claude/skills/prompt-engineering-conventions/: SKILL.md
.claude/skills/research-source-planner/: SKILL.md
.claude/skills/review-prompts/: SKILL.md
.claude/skills/session-retrospective/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.claude/skills/skill-reviewer/: SKILL.md
.claude/skills/spec-driven-dev/: SKILL.md
.claude/skills/task-learnings/: SKILL.md
.github/workflows/: ci.yml  fuzz-nightly.yml  vendor-vt.yml
.specs/: README.md
.specs/m0-seance/: d2-memo.md  design.md  gap-log.md  requirements.md  tasks.md
.specs/m1-first-wail/: design.md  exit-report.md  requirements.md  tasks.md
.specs/m1-first-wail/perf/: presentmon-typing-2026-07-04.csv  vtebench-banshee-2026-07-05.md
.specs/m2-chorus/: spec.md  tasks.md
.specs/m3-familiar/: spec.md  tasks.md
.specs/m4-manifest/: spec.md  tasks.md
crates/ai-acp/: Cargo.toml
crates/ai-acp/src/: lib.rs
crates/ai-inline/: Cargo.toml
crates/ai-inline/src/: lib.rs
crates/app-shell/: Cargo.toml  MANUAL-MATRIX.md  build.rs
crates/app-shell/src/: clipboard.rs  ime.rs  main.rs
crates/app-shell/tests/: e2e_smoke.rs  live_input_matrix.rs
crates/config/: Cargo.toml
crates/config/src/: diagnostics.rs  lib.rs  schema.rs  watch.rs
crates/config/tests/: integration.rs
crates/ghostty-vt-sys/: Cargo.toml  README.md  build.rs
crates/ghostty-vt-sys/src/: bindings.rs  lib.rs
crates/ghostty-vt-sys/tests/: smoke.rs
crates/layout/: Cargo.toml
crates/layout/src/: lib.rs  profile.rs  session.rs
crates/layout/tests/: lifecycle_cycles.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/persist/: Cargo.toml
crates/persist/src/: lib.rs
crates/term-core/: Cargo.toml
crates/term-core/fuzz/: Cargo.toml  README.md
crates/term-core/fuzz/fuzz_targets/: feed.rs
crates/term-core/src/: lib.rs  osc52.rs  osc7.rs  render_state.rs  scrollback.rs  selection.rs  snapshot.rs
crates/term-core/tests/: conformance.rs  flood.rs  flood_sync.rs  gap_probes.rs  osc52_gating.rs  roundtrip.rs  scrollback.rs  selection.rs
crates/term-core/tests/conformance/goldens/: alt_screen.golden  bracketed_paste_mode.golden  cjk_wide_chars.golden  mouse_mode_setters.golden  osc_0_2_title.golden  osc_133_prompt_marks.golden  osc_52_clipboard.golden  osc_7_cwd.golden  osc_8_hyperlink.golden  scroll_regions.golden  sgr_truecolor.golden  utf8_multibyte.golden  wrap_and_reflow.golden
crates/term-input/: Cargo.toml
crates/term-input/src/: encoder.rs  kitty.rs  legacy.rs  lib.rs  mouse.rs  paste.rs
crates/term-input/tests/: golden.rs  kitty_matrix.rs  mouse_encoding.rs  paste_pipeline.rs
crates/term-pty/: Cargo.toml
crates/term-pty/examples/: echo_spike.rs
crates/term-pty/src/: conpty.rs  env.rs  exit.rs  job.rs  lib.rs  paste_write.rs  procwalk.rs  resize.rs  wsl.rs
crates/term-pty/tests/: lifecycle.rs  paste_flow.rs  resize_storm.rs  spawn_spec.rs  wsl_discovery.rs
crates/term-render/: Cargo.toml
crates/term-render/examples/: grid_spike.rs
crates/term-render/src/: atlas.rs  context.rs  device.rs  grid.rs  grid_spike.rs  lib.rs  offscreen.rs  overlay.rs  swapchain.rs  text.rs
crates/term-render/tests/: text_pipeline_warp.rs  warp_smoke.rs
docs/: config-reference.md  soak.md  vtebench.md
scripts/: capture-window.ps1  live-matrix.ps1  soak.ps1  visual-smoke.ps1  vtebench.ps1
xtask/: vendor-manifest.toml
xtask/src/: main.rs  manifest.rs  sha256.rs  vendor.rs
(+9 files in other folders)
