[package]
name = "ghostty-vt-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
links = "ghostty-vt-static"
description = "Raw FFI bindings to the vendored libghostty-vt static library. FFI quarantine boundary (SPEC §6.1(1)): only this crate references the C header or vendor/ include path."

[dependencies]

[build-dependencies]
