[package]
name = "layout"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
config = { path = "../config" }
term-core = { path = "../term-core" }
term-pty = { path = "../term-pty" }

[target.'cfg(windows)'.dev-dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
]
